# srs-benchmark-rust

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  README.md
src/: autodiff.rs  config.rs  data.rs  eval.rs  features.rs  main.rs  metrics.rs  models.rs  run.rs  split.rs  train.rs
src/models/: act_r.rs  anki.rs  avg.rs  dash.rs  dash_act_r.rs  ebisu.rs  fsrs_init.rs  fsrs_rs.rs  fsrs_v1.rs  fsrs_v2.rs  fsrs_v3.rs  fsrs_v4.rs  fsrs_v4dot5.rs  fsrs_v5.rs  fsrs_v6.rs  fsrs_v6_one_step.rs  hlr.rs  logistic_regression.rs  mod.rs  moving_avg.rs  rmse_bins_exploit.rs  sm2.rs  sm2_trainable.rs
