[package]
name = "srs-benchmark-rust"
version = "0.1.0"
edition = "2021"
description = "A Rust port of open-spaced-repetition/srs-benchmark for speed."
license = "MIT"

[[bin]]
name = "script"
path = "src/main.rs"

[features]
# Round every model/optimizer arithmetic result to f32 precision (mimics torch's f32).
# Default build is f64 (the rounding compiles to a no-op). Experiment-only.
fp32 = []

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
rayon = "1"
parquet = { version = "58.3.0", features = ["arrow"] }
arrow = "58.3.0"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
